// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet renders ok with complete data 1`] = `
<div>
  <script
    type="application/ld+json"
  >
    var snippet = [
                    {
                        "@context": "http://schema.org",
                        "@type": "Recipe",
                        "author": "",
                        "cookTime": "PT45M",
                        "datePublished": "2018-09-20T14:08:46.236Z",
                        "description": "",
                        "image": "https://arc-anglerfish-arc2-sandbox-sandbox-lanacionar.s3.amazonaws.com/public/YQPFIZTCKVFKFDHNINT7IBBI6U.jpg",
                        "recipeIngredient": "Tomate, Zanahoria, Cebolla, Ajo,Tomate, Harina, Huevos, Lo que sea",
                        "name": "Tras el 0-0 con Independiente: cómo le fue a River en la era Marcelo Gallardo cuando tuvo que definir una serie como local",
                        "recipeInstructions": "Cocinar, Probar, Servir",
                        "recipeYield": "8 porciones"
                    }
                ];
  </script>
</div>
`;

exports[`snippet renders ok with missing data 1`] = `
<div>
  <script
    type="application/ld+json"
  >
    var snippet = [
                    {
                        "@context": "http://schema.org",
                        "@type": "Recipe",
                        "author": "",
                        "cookTime": "PT45M",
                        "datePublished": "2018-09-20T14:08:46.236Z",
                        "description": "",
                        "image": "https://arc-anglerfish-arc2-sandbox-sandbox-lanacionar.s3.amazonaws.com/public/YQPFIZTCKVFKFDHNINT7IBBI6U.jpg",
                        "recipeIngredient": ",",
                        "name": "Tras el 0-0 con Independiente: cómo le fue a River en la era Marcelo Gallardo cuando tuvo que definir una serie como local",
                        "recipeInstructions": "",
                        "recipeYield": "8 porciones"
                    }
                ];
  </script>
</div>
`;
